--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
 <mat-toolbar color = "primary">
   <span>
-    Jay Makwana
+    Ristorante Con Fusion
   </span>
 </mat-toolbar>
 <app-menu>
-  
 </app-menu>
+<app-dishdetail>
+</app-dishdetail>
