--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -24,7 +24,7 @@
                 </mat-grid-tile>
         </mat-grid-list>
     </div>
-    <div fxFlex *ngIf = 'selectedDish'>
+    <!-- <div fxFlex *ngIf = 'selectedDish'>
         <mat-card>
         <mat-card-header>
             <mat-card-title>
@@ -46,4 +46,5 @@
                 </button>
             </mat-card-actions>
         </mat-card>
-    </div>
+    </div> -->
+    
