--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -3,16 +3,16 @@
     fxLayoutGap = '10px' fxLayoutGap.xs = '0'>
         <div fxFlex = '40'>
             <!-- <p>Display the details of the dish here</p> -->
-            <mat-card>
+            <mat-card *ngIf = 'dish'>
                 <mat-card-header>
                     <mat-card-title>
-                        <h3>{{ selectedDish.name | uppercase }}</h3>
+                        <h3>{{ dish.name | uppercase }}</h3>
                     </mat-card-title>
                 </mat-card-header>
-                <img mat-card-image src = {{selectedDish.image}} alt = {{selectedDish.name}}>
+                <img mat-card-image src = {{dish.image}} alt = {{dish.name}}>
                 <mat-card-content>
                     <p>
-                        {{selectedDish.description}}
+                        {{dish.description}}
                     </p>
                 </mat-card-content>
                     <mat-card-actions>
@@ -26,7 +26,7 @@
                 </mat-card>
         </div>
         <div fxFlex = '40'>
-            <mat-list fxFlex *ngIf = 'dish.comments'>
+            <mat-list *ngIf = 'dish'>
                 <h1>Comments</h1>
                 <mat-list-item *ngFor = 'let comment of dish.comments'>
                   <p matLine> {{comment.comment}} </p>
