--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -16,6 +16,9 @@
                     </p>
                 </mat-card-content>
                     <mat-card-actions>
+                        <button mat-button (click) = 'goBack()'>
+                            BACK
+                        </button>
                         <button mat-button>
                             LIKE
                         </button>
